fixed on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -22,6 +22,7 @@
     align-items: center;
     backdrop-filter:blur(30px);
     border-radius: 20px;
+    padding: 40px;
 }
 
 .hi-text {
